Missing issue list - code changes for different actions

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -318,10 +318,10 @@ get_inward_by_number = select t1.inwardNumber\
                       ,t11.language \
                       ,t12.subscriptionID \
                 from inward t1 \
-                left join countries t2 on t1.country = t2.id \
-                left join states t3 on t1.state = t3.id \
-                left join districts t10 on t1.district = t10.id \
-                left join cities t4 on t1.city = t4.id \
+                    left join countries t2 on t1.country = t2.id \
+                    left join states t3 on t1.state = t3.id \
+                    left join districts t10 on t1.district = t10.id \
+                    left join cities t4 on t1.city = t4.id \
                 left join subscriber t5 on t1.subscriberId = t5.id \
                 left join inward_purpose t6 on t1.inwardPurpose = t6.id \
                 left join payment_mode t7 on t1.paymentMode = t7.id \
@@ -749,14 +749,16 @@ select_generateml = Select \
                     subscriber.pincode, subscriptiondetails.copies, subscriptiondetails.startYear, subscriptiondetails.startMonth, \
                     subscriptiondetails.endYear, subscriptiondetails.endMonth \
                     from \
-                    subscriber, subscription, journals, journal_groups, subscriptiondetails, journal_group_contents, \
-                    cities, states, countries, districts, subscriber_type \
+                    subscriber left join cities on subscriber.city = cities.id \
+                    left join countries on subscriber.country = countries.id \
+                    left join districts on subscriber.district = districts.id \
+                    left join states on subscriber.state = states.id, \
+                    subscription, journals, journal_groups, subscriptiondetails, journal_group_contents, subscriber_type \
                     where subscription.subscriberID = subscriber.id and subscriptiondetails.subscriptionID = subscription.id \
                     and journal_group_contents.journalGroupId = journal_groups.id and journal_group_contents.journalId = journals.id \
-                    and subscriptiondetails.journalGroupID = journal_groups.id and subscriber.city = cities.id and \
-                    subscriber.district = districts.id and subscriber.state = states.id and subscriber.country = countries.id \
+                    and subscriptiondetails.journalGroupID = journal_groups.id \
                     and subscriber.subtype = subscriber_type.id and subscriptiondetails.active = '1' \
-                    and journals.journalName = ? and subscriptiondetails.endYear <= ? and subscriptiondetails.startYear >= ? 
+                    and journals.journalName = ? and subscriptiondetails.endYear >= ? and subscriptiondetails.startYear <= ? 
 
 insert_ml = insert into mailing_list (journalId, issue, `year`, month) values \
             ((select id from journals where journals.journalName = ?),?,?,(select id from months where months.month = ?))
@@ -815,57 +817,54 @@ subscribernumberbil =   select subscriber.subscriberNumber \
   
 generate_bil = select   mailing_list.id, \
                         subscriber.id, \
-                        subscription.id,\
+                        subscription.id, \
                         subscriptiondetails.id, \
 			journals.id, \
-			journals.journalCode,\
-                        subscriber_type.subtypecode,\
+			journals.journalCode, \
+                        subscriber_type.subtypecode, \
                         subscriber.subscriberNumber, \
-			subscriber.subscriberName,\
+			subscriber.subscriberName, \
                         subscriber.department, \
 			subscriber.institution, \
-			subscriber.subscriberAddress,\
+			subscriber.subscriberAddress, \
                         cities.city, \
 			districts.district, \
-			states.state,\
-                        countries.country,\
-                        subscriber.pincode,\
-                        back_issue_list.copies,\
-                        subscriptiondetails.startYear,\
-                        subscriptiondetails.startMonth,\
-                        subscriptiondetails.endYear,\
-                        subscriptiondetails.endMonth,\
-                        back_issue_list.issue_number,\
-                        back_issue_list.month,\
-                        back_issue_list.`year`,\
+			states.state, \
+                        countries.country, \
+                        subscriber.pincode, \
+                        back_issue_list.copies, \
+                        subscriptiondetails.startYear, \
+                        subscriptiondetails.startMonth, \
+                        subscriptiondetails.endYear, \
+                        subscriptiondetails.endMonth, \
+                        back_issue_list.issue_number, \
+                        back_issue_list.month, \
+                        back_issue_list.`year`, \
                         back_issue_list.id \
-                FROM  back_issue_list,\
-                        mailing_list,\
-                        subscriber,\
-                        subscription,\
-                        journals,\
-                        journal_groups,\
-                        subscriptiondetails,\
-                        journal_group_contents,\
-                        cities,\
-                        states,\
-                        countries, \
-                        districts, \
+                FROM  back_issue_list, \
+                        mailing_list, \
+                        subscriber left join cities on subscriber.city = cities.id \
+                        left join states on subscriber.state = states.id \
+                        left join countries on subscriber.country = countries.id \
+                        left join districts on subscriber.district = districts.id, \
+                        subscription, \
+                        journals, \
+                        journal_groups, \
+                        subscriptiondetails, \
+                        journal_group_contents, \
                         subscriber_type \
                 where back_issue_list.`year` = mailing_list.`year` \
                         and back_issue_list.issue_number = mailing_list.issue \
                         and back_issue_list.month = mailing_list.month \
                         and back_issue_list.sent_to_subscriber = false \
                         and back_issue_list.subscription_detail_id = subscriptiondetails.id \
+                        and back_issue_list.journal_id = journals.id \
+                        and mailing_list.journalId = journals.id \
                         and subscription.subscriberID = subscriber.id \
                         and subscriptiondetails.subscriptionID = subscription.id \
                         and journal_group_contents.journalGroupId = journal_groups.id \
                         and journal_group_contents.journalId = journals.id \
                         and subscriptiondetails.journalGroupID = journal_groups.id \
-                        and subscriber.city = cities.id \
-                        and subscriber.district = districts.id \
-                        and subscriber.state = states.id \
-                        and subscriber.country = countries.id \
                         and subscriber.subtype = subscriber_type.id \
                         and subscriptiondetails.active = true \
                         and subscriber.subscriberNumber = ?
@@ -914,8 +913,82 @@ search_reminders_subscriber = select subscriber.id, subscription.id, \
                     and year(reminders.reminderDate)= year(curdate()) \
                      and reminders.reminderType = ? and reminders.medium = ?
 
-serch_journals_subscription =
+serch_journals_subscription = select * from reminders
 
 #------------------------------------------------------------------------------
 #End Reminders
 #------------------------------------------------------------------------------
+
+#--------------------------------------------------------------------------
+# Missing Issue List
+#--------------------------------------------------------------------------
+insert_missing_issue = insert into missing_issue ( inwardId, subscriberId,msEntryDate ) \
+                        VALUES ( (select id from inward where inward.inwardNumber = ?), \
+                        (select id from subscriber where subscriber.subscriberNumber = ?), curdate())
+
+insert_missing_journals = insert into missing_issue_journals ( missingissueId, subscriptiondetailId, journalGroupId, journalId, month, `year`, missingCopies ) \
+                            VALUES ( ?, \
+                            (select subscriptiondetails.id from subscriptiondetails, journal_groups where \
+                                subscriptiondetails.subscriptionID = ? \
+                                 and subscriptiondetails.journalGroupID =  journal_groups.id and \
+                                    journal_groups.journalGroupName = ?), \
+                              (select id from journal_groups where journal_groups.journalGroupName = ?), \
+                              (select id from journals where journalName = ?), \
+                            (select id from months where month = ?), ?, ?)
+
+
+get_subscriptionid = select subscription.id from subscription, subscriber where \
+                        subscription.subscriberID = subscriber.id and subscriber.subscriberNumber = ?
+
+get_journalgroup = select journal_groups.journalGroupName from journal_groups, subscriptiondetails \
+                    where subscriptiondetails.journalGroupID = journal_groups.id and subscriptiondetails.subscriptionID = ? \
+                    and subscriptiondetails.active = 1 and subscriptiondetails.endYear >= year(curdate())
+ 
+get_journalname = select journalName from journals, journal_group_contents, journal_groups \
+                    where journal_group_contents.journalGroupId = journal_groups.id and journal_group_contents.journalId = journals.id \
+                and journal_groups.journalGroupName = ?
+
+get_copies = select subscriptiondetails.copies from subscriptiondetails, journal_groups \
+            where subscriptiondetails.journalGroupID = journal_groups.id \
+            and journal_groups.journalGroupName = ? and subscriptiondetails.subscriptionID = ?
+
+get_missing_journals = select subscriptiondetails.id, journal_groups.journalGroupName, journals.journalCode, \
+                        journals.journalName, subscriptiondetails.copies, missing_issue_journals.month, \
+                        missing_issue_journals.`year`, missing_issue_journals.missingCopies, \
+                        subscriptiondetails.startYear, subscriptiondetails.endMonth, subscriptiondetails.startMonth, \
+                        subscriptiondetails.endYear \
+                        from missing_issue_journals, subscriptiondetails, journal_groups, journals \
+                        where missing_issue_journals.subscriptiondetailId = subscriptiondetails.id \
+                        and missing_issue_journals.journalGroupId = journal_groups.id \
+                        and missing_issue_journals.journalId = journals.id and missing_issue_journals.missingissueId = ?
+
+get_subscriber_detail = select subscriber.subscriberName, subscriber.department, subscriber.institution, \
+                        subscriber.subscriberAddress, cities.city, districts.district, states.state, \
+                        countries.country, subscriber.pincode, subscriber.email, subscriber_type.subtypedesc \
+                        from subscriber left join states on subscriber.state = states.id \
+                        left join cities on subscriber.city = cities.id \
+                        left join countries on subscriber.country = countries.id \
+                        left join districts on subscriber.district = districts.id \
+                        left join subscriber_type on subscriber.subtype = subscriber_type.id \
+                        where subscriber.subscriberNumber = ?
+
+complete_inward = update inward set completed = true where inwardNumber = ?
+
+update_missing_action = update missing_issue_journals SET action = ?, sentOn = curdate() WHERE missingissueId = ?
+
+reprint_mi_list = select mailing_list_detail.id, mailing_list_detail.mailinglistId, mailing_list_detail.subscriberId, \
+                mailing_list_detail.subscriptionId, mailing_list_detail.subscriptionDetailId, mailing_list_detail.journalId, \
+                mailing_list_detail.journalCode, mailing_list_detail.subtypecode, mailing_list_detail.subscriberNumber, \
+                mailing_list_detail.subscriberName, mailing_list_detail.department, mailing_list_detail.institution, \
+                mailing_list_detail.address, mailing_list_detail.city, mailing_list_detail.district, mailing_list_detail.state, \
+                mailing_list_detail.country, mailing_list_detail.pincode, mailing_list_detail.copies, mailing_list_detail.startYear, \
+                mailing_list_detail.startMonth, mailing_list_detail.endYear, mailing_list_detail.issue, mailing_list_detail.endMonth, \
+                mailing_list_detail.month, mailing_list_detail.`year` \
+                from missing_issue_journals, mailing_list_detail \
+                where mailing_list_detail.journalId = missing_issue_journals.journalId \
+                and mailing_list_detail.subscriptionDetailId = missing_issue_journals.subscriptiondetailId \
+                and mailing_list_detail.month = missing_issue_journals.month and mailing_list_detail.`year`= missing_issue_journals.`year` \
+                and missing_issue_journals.missingissueId = ?
+#--------------------------------------------------------------------------
+# End Missing Issue List
+#-------------------------------------- --   ----------------------------------
