Changes to email: Send email if input is byteStream, reading of properties file moved into a separate function. Added functions to generate reminder Type1 and Type2 pdf's. Added a properties file to hold common properties which can be changed like leading, font, font type, size. The from email is set to be read from the properties file if the file input is empty.

--- a/trunk/web/WEB-INF/classes/jds_email.properties
+++ b/trunk/web/WEB-INF/classes/jds_email.properties
@@ -12,6 +12,8 @@
 # mail.*.user - The user name to use when connecting to mail servers using the specified protocol. Overrides the mail.user property.
 # Debugging issues - http://www.oracle.com/technetwork/java/faq-135477.html#condebug
 
+FROM_TEXT      = Indian Academy Of Sciences
+FROM_EMAIL_ID  = jds.adm.all@gmail.com
 
 # mail.smtp.host
 SMTP_HOST_NAME = smtp.gmail.com
