--- a/web/WEB-INF/classes/jds_email.properties
+++ b/web/WEB-INF/classes/jds_email.properties
@@ -12,6 +12,8 @@
 # mail.*.user - The user name to use when connecting to mail servers using the specified protocol. Overrides the mail.user property.
 # Debugging issues - http://www.oracle.com/technetwork/java/faq-135477.html#condebug
 
+FROM_TEXT      = Indian Academy Of Sciences
+FROM_EMAIL_ID  = jds.adm.all@gmail.com
 
 # mail.smtp.host
 SMTP_HOST_NAME = smtp.gmail.com
