--- a/web/WEB-INF/classes/jds_mailinglist.properties
+++ b/web/WEB-INF/classes/jds_mailinglist.properties
@@ -3,7 +3,8 @@ leading     = 10.0
 #Check this site to get the #define for the text alignment, font
 #http://api.itextpdf.com/itext/constant-values.html#com.itextpdf.text.Element.ALIGN_BASELINE
 #1 = ALIGN_CENTER
-textAlignment   = 1
+#0 = ALIGN_LEFT
+textAlignment   = 0
 fontFamily      = Courier
 fontSize        = 10
 fontStyle       = BOLD
