--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -989,6 +989,49 @@ reprint_mi_list = select mailing_list_detail.id, mailing_list_detail.mailinglist
                 and mailing_list_detail.subscriptionDetailId = missing_issue_journals.subscriptiondetailId \
                 and mailing_list_detail.month = missing_issue_journals.month and mailing_list_detail.`year`= missing_issue_journals.`year` \
                 and missing_issue_journals.missingissueId = ?
+
+generate_ml = select mailing_list.id, subscriber.id, subscription.id, subscriptiondetails.id, journals.id, \
+                journals.journalCode,subscriber_type.subtypecode, subscriber.subscriberNumber, subscriber.subscriberName, \
+                subscriber.department, subscriber.institution, subscriber.subscriberAddress, cities.city, districts.district, \
+                states.state, countries.country, subscriber.pincode, missing_issue_journals.missingCopies, subscriptiondetails.startYear, \
+                subscriptiondetails.startMonth, subscriptiondetails.endYear, subscriptiondetails.endMonth, \
+                mailing_list.issue, missing_issue_journals.month, \
+                missing_issue_journals.`year`, missing_issue_journals.id \
+                from mailing_list, missing_issue_journals, missing_issue, \
+                subscriptiondetails, subscription, journals, subscriber_type, \
+                subscriber left join cities on subscriber.city = cities.id \
+                left join states on subscriber.state = states.id \
+                left join countries on subscriber.country = countries.id \
+                left join districts on subscriber.district = districts.id \
+                where \
+                mailing_list.journalId = journals.id \
+                and missing_issue_journals.journalId = journals.id \
+                and missing_issue_journals.journalId = mailing_list.journalId \
+                and missing_issue_journals.subscriptiondetailId = subscriptiondetails.id \
+                and missing_issue_journals.month = mailing_list.month and missing_issue_journals.`year` = mailing_list.`year` \
+                and subscriptiondetails.subscriptionID = subscription.id and subscription.subscriberID = subscriber.id \
+                and missing_issue_journals.subscriptiondetailId = subscriptiondetails.id and missing_issue.subscriberId = subscriber.id \
+                and missing_issue_journals.missingissueId = missing_issue.id \
+                and subscriber.subtype = subscriber_type.id and missing_issue_journals.missingissueId = ?
+
+insert_mldtl_mil = insert into mailing_list_detail \
+                    ( mailinglistId, subscriberId, subscriptionId, subscriptionDetailId, journalId, journalCode, \
+                    subtypecode, subscriberNumber, subscriberName, department, institution, address, city, district, \
+                    state, country, pincode, copies, startYear, startMonth, endYear, endMonth, issue, month, \
+                    `year`, miId, bildate) \
+                    VALUES \
+                    ( ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, \
+                    ?, ?, ?, curdate())
+
+get_month_mi = select months.month from months, mailing_list, journals \
+            where mailing_list.journalId = journals.id \
+                and mailing_list.month = months.id and journals.journalName = ? and mailing_list.`year` = ?
+
+get_miId_for_inward = Select missing_issue.id, subscriber.subscriberNumber \
+                        FROM missing_issue, inward, subscriber \
+                        where \
+                        missing_issue.inwardId = inward.id \
+                        and missing_issue.subscriberId = subscriber.id and inward.inwardNumber = ?
 #--------------------------------------------------------------------------
 # End Missing Issue List
 #-------------------------------------- --   ----------------------------------
