PDF and email for request for invoice

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -679,6 +679,8 @@ invoice_insert = insert into invoice ( invoiceNumber, subscriptionID, invoiceCre
 
 get_invoice_detail = SELECT t1.id as inwardID, \
                             t1.inwardNumber, \
+                            t3.subscriberName, \
+                            t3.email, \
                             t2.id as subscriptionID, \
                             t2.subscriberID, \
                             t3.subscriberAddress, \
