PDF and email for request for invoice

--- a/trunk/web/WEB-INF/classes/email_templates.properties
+++ b/trunk/web/WEB-INF/classes/email_templates.properties
@@ -14,3 +14,9 @@ inward_ack_email_body = Dear Subscriber,\n\n\
                         Refer to the attached document for more details.\n\n\n\
                         Warm Regards,\n\
                         Indian Academy Of Sciences
+
+
+inward_request_for_invoice = Dear Subscriber,\n\n\
+                             As per your request for Journal Prices, Please find the Invoice attached.\n\n\
+                             Warm Regards,\n\
+                             Indian Academy Of Sciences
