--- a/trunk/web/WEB-INF/classes/pdf_templates.properties
+++ b/trunk/web/WEB-INF/classes/pdf_templates.properties
@@ -1,1 +1,5 @@
 cheque_return = The Cheque/DD No: %s dated %s for INR %s is returned herewith for want of the following information
+
+inward_ack = This is to acknowledge with thanks the receipt of the Cheque/DD No: %s of Amount Rs. %s towards subscription to the following Journals
+
+inward_request_for_invoice = As desired, We enclose our Invoice No. %s Date: %s for Rs. %s. \nPlease arrange an early payment by means of a Bank Draft (or) Cheque drawn in favour of INDIAN ACADEMY OF SCIENCES, BANGALORE.
