--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -15,6 +15,9 @@
 #--------------------------------------------------------------------------
 
 ! Generic ------------------------------------------------------
+
+logged_in_user = select firstName, lastName from users where username = ?
+
 purpose = select purpose from inward_purpose order by id
 
 payment_mode = select payment_mode from payment_mode order by id
