--- a/JDSMigration/nbproject/project.properties
+++ b/JDSMigration/nbproject/project.properties
@@ -27,13 +27,15 @@ dist.jar=${dist.dir}/JDSMigration.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jxl.jar=lib\\jxl.jar
 file.reference.log4j-1.2.16.jar=lib\\log4j-1.2.16.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=lib\\mysql-connector-java-5.1.18-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
-    ${file.reference.log4j-1.2.16.jar}
+    ${file.reference.log4j-1.2.16.jar}:\
+    ${file.reference.jxl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
