--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -4,7 +4,8 @@
 log4j.rootLogger=ERROR, stdout, migration
 
 log4j.logger.JDSMigration.Inward=DEBUG
-log4j.logger.JDSMigration.Subscription=DEBUG
+#log4j.logger.JDSMigration.Subscriber=DEBUG
+log4j.logger.JDSMigration.Subscription=ERROR
 #log4j.logger.JDSMigration.JDSMigrate=DEBUG
 #log4j.logger.JDSMigration.MigrationBase=DEBUG
 
