--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -672,6 +672,13 @@ list_agent_prm = select t1.id\
                     where
 !End List Agents ---------------------------------------------
 
+!Circulation Figures ---------------------------------------------
+
+list_circulation_figures = select
+!End Cisrculation Figures ---------------------------------------------
+#--------------------------------------------------------------------------
+# End Reports
+#--------------------------------------------------------------------------
 
 #--------------------------------------------------------------------------
 # Invoice
@@ -737,9 +744,8 @@ get_invoice_detail_usng_invno =  Select  t5.id, \
                                                 and t6.id=t2.inwardID \
                                                 and t5.invoiceNumber = ?
 
-#--------------------------------------------------------------------------
-# End Reports
-#--------------------------------------------------------------------------
+
+
 
 #--------------------------------------------------------------------------
 # Start Mailing List
@@ -905,21 +911,77 @@ search_bil = select \
 # -------------------------------------------------------------------------
 #Reminders
 #--------------------------------------------------------------------------
-search_reminders_subscriber = select subscriber.id, subscription.id, \
-                    subscriber_type.subtypecode, subscriber.subscriberNumber, subscriber.subscriberName, subscriber.department, \
-                    subscriber.institution, subscriber.subscriberAddress, cities.city, districts.district, states.state, \
-                    countries.country, subscriber.pincode, subscriber.email \
-                    from \
-                    reminders, subscriber, subscription, cities, states, countries, districts, subscriber_type \
-                    where \
-                    subscription.subscriberID = subscriber.id and reminders.subscriptionId = subscription.id \
-                    and subscriber.city = cities.id and subscriber.district = districts.id and subscriber.state = states.id \
-                    and subscriber.country = countries.id and subscriber.subtype = subscriber_type.id \
-                    and year(reminders.reminderDate)= year(curdate()) \
-                     and reminders.reminderType = ? and reminders.medium = ?
+search_reminders_subscriber =  select subscriber.id, subscription.id as subId, subscriber_type.subtypecode, subscriber.subscriberNumber, \
+                                subscriber.subscriberName, reminders.balance, reminders.reminderType, reminders.reminderDate, \
+                                 subscriber.department, subscriber.institution, subscriber.subscriberAddress, \
+                                cities.city, districts.district, states.state, countries.country, subscriber.pincode, \
+                                subscriber.email \
+                                from reminders, subscription, \
+                                subscriber left join cities on subscriber.city = cities.id \
+                                left join states on subscriber.state = states.id \
+                                left join countries on subscriber.country = countries.id \
+                                left join districts on subscriber.district = districts.id, subscriber_type \
+                                where \
+                                subscription.subscriberID = subscriber.id and reminders.subscriptionId = subscription.id \
+                                and subscriber.subtype = subscriber_type.id and year(reminders.reminderDate)= year(curdate()) \
+                                and reminders.reminderType = ?
 
-serch_journals_subscription = select * from reminders
+get_reminders_subscriber =  select subscriber.id, subscription.id as subId, subscriber_type.subtypecode, subscriber.subscriberNumber, \
+                                subscriber.subscriberName, reminders.balance, reminders.reminderType, reminders.reminderDate, \
+                                 subscriber.department, subscriber.institution, subscriber.subscriberAddress, \
+                                cities.city, districts.district, states.state, countries.country, subscriber.pincode, \
+                                subscriber.email \
+                                from reminders, subscription, \
+                                subscriber left join cities on subscriber.city = cities.id \
+                                left join states on subscriber.state = states.id \
+                                left join countries on subscriber.country = countries.id \
+                                left join districts on subscriber.district = districts.id, subscriber_type \
+                                where \
+                                subscription.subscriberID = subscriber.id and reminders.subscriptionId = subscription.id \
+                                and subscriber.subtype = subscriber_type.id and year(reminders.reminderDate)= year(curdate()) \
+                                and reminders.reminderType = ? and reminders.reminderDate = curdate();
 
+send_email_reminders =  select subscriber.id, subscription.id as subId, subscriber_type.subtypecode, subscriber.subscriberNumber, \
+                                subscriber.subscriberName, reminders.balance, reminders.reminderType, reminders.reminderDate, \
+                                 subscriber.department, subscriber.institution, subscriber.subscriberAddress, \
+                                cities.city, districts.district, states.state, countries.country, subscriber.pincode, \
+                                subscriber.email \
+                                from reminders, subscription, \
+                                subscriber left join cities on subscriber.city = cities.id \
+                                left join states on subscriber.state = states.id \
+                                left join countries on subscriber.country = countries.id \
+                                left join districts on subscriber.district = districts.id, subscriber_type \
+                                where \
+                                subscription.subscriberID = subscriber.id and reminders.subscriptionId = subscription.id \
+                                and subscriber.subtype = subscriber_type.id and year(reminders.reminderDate)= year(curdate()) \
+                                and reminders.reminderType = ? and reminders.reminderDate = curdate() and subscriber.email <> " "
+
+send_print_reminders =  select subscriber.id, subscription.id as subId, subscriber_type.subtypecode, subscriber.subscriberNumber, \
+                                subscriber.subscriberName, reminders.balance, reminders.reminderType, reminders.reminderDate, \
+                                 subscriber.department, subscriber.institution, subscriber.subscriberAddress, \
+                                cities.city, districts.district, states.state, countries.country, subscriber.pincode, \
+                                subscriber.email \
+                                from reminders, subscription, \
+                                subscriber left join cities on subscriber.city = cities.id \
+                                left join states on subscriber.state = states.id \
+                                left join countries on subscriber.country = countries.id \
+                                left join districts on subscriber.district = districts.id, subscriber_type \
+                                where \
+                                subscription.subscriberID = subscriber.id and reminders.subscriptionId = subscription.id \
+                                and subscriber.subtype = subscriber_type.id and year(reminders.reminderDate)= year(curdate()) \
+                                and reminders.reminderType = ? and reminders.reminderDate = curdate() and subscriber.email = " "
+
+insert_reminder_details = insert into reminder_details ( reminderId, medium, language sent_date) \
+                            VALUES (?, ?, ?, curdate())
+
+get_subscribed_journals = select journals.journalCode, journals.journalName, journal_groups.journalGroupName, \
+                            subscriptiondetails.copies, subscriptiondetails.startYear, subscriptiondetails.startMonth, \
+                            subscriptiondetails.endMonth, subscriptiondetails.endYear \
+                            from reminders, subscription, subscriptiondetails, journal_group_contents, journal_groups, journals \
+                            where reminders.subscriptionId = subscription.id and subscriptiondetails.subscriptionID = subscription.id \
+                            and subscriptiondetails.journalGroupID = journal_groups.id and journal_group_contents.journalGroupId = journal_groups.id \
+                            and journal_group_contents.journalId = journals.id and subscriptiondetails.active = 1 \
+                            and reminders.id = ?
 #------------------------------------------------------------------------------
 #End Reminders
 #------------------------------------------------------------------------------
