--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -105,6 +105,8 @@ journal_groups = select id,journalGroupName from journal_groups order by id
 
 journal_name = select journalName from journals
 
+journalName = select journalName from journals
+
 journal_insert = insert into journals(journalCode,journalName,issnNo,pages,startYear,issues) values(?,?,?,?,?,?)
 
 update_journal = update journals set journalCode = ?, journalName = ?, issnNo = ?, pages = ?, startYear = ?, issues = ? where id = ?
@@ -769,7 +771,7 @@ select_generateml = Select \
                     and journal_group_contents.journalGroupId = journal_groups.id and journal_group_contents.journalId = journals.id \
                     and subscriptiondetails.journalGroupID = journal_groups.id \
                     and subscriber.subtype = subscriber_type.id and subscriptiondetails.active = '1' \
-                    and journals.journalName = ? and subscriptiondetails.endYear >= ? and subscriptiondetails.startYear <= ? 
+                    and journals.journalName = ? and subscriptiondetails.endYear >= ? and subscriptiondetails.startYear <= ?
 
 insert_ml = insert into mailing_list (journalId, issue, `year`, month) values \
             ((select id from journals where journals.journalName = ?),?,?,(select id from months where months.month = ?))
@@ -825,7 +827,7 @@ subscribernumberbil =   select subscriber.subscriberNumber \
                             and subscription.subscriberID = subscriber.id \
                         group by subscriber.subscriberNumber
 
-  
+
 generate_bil = select   mailing_list.id, \
                         subscriber.id, \
                         subscription.id, \
@@ -889,7 +891,7 @@ insert_mldtl_bil = insert into mailing_list_detail \
                     ( ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, \
                     ?, ?, ?, ? )
 
-update_bil = update back_issue_list SET sent_to_subscriber = true WHERE Id = ?  
+update_bil = update back_issue_list SET sent_to_subscriber = true WHERE Id = ?
 
 search_bil = select \
             mailing_list_detail.journalCode, mailing_list_detail.subtypecode, mailing_list_detail.subscriberNumber, \
@@ -903,7 +905,7 @@ search_bil = select \
             where mailing_list_detail.subscriptionDetailId = subscriptiondetails.id and subscriptiondetails.active = '1' \
             and  mailing_list_detail.startYear >= subscriptiondetails.startYear and subscriberNumber = ? \
             and bilid <> ' ' group by bildate
-           
+
 #--------------------------------------------------------------------------
 # End Back Issue List
 #--------------------------------------------------------------------------
@@ -1010,7 +1012,7 @@ get_subscriptionid = select subscription.id from subscription, subscriber where 
 get_journalgroup = select journal_groups.journalGroupName from journal_groups, subscriptiondetails \
                     where subscriptiondetails.journalGroupID = journal_groups.id and subscriptiondetails.subscriptionID = ? \
                     and subscriptiondetails.active = 1 and subscriptiondetails.endYear >= year(curdate())
- 
+
 get_journalname = select journalName from journals, journal_group_contents, journal_groups \
                     where journal_group_contents.journalGroupId = journal_groups.id and journal_group_contents.journalId = journals.id \
                 and journal_groups.journalGroupName = ?
