--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -678,9 +678,26 @@ list_agent_prm = select t1.id\
 
 list_circulation_figures = select
 !End Cisrculation Figures ---------------------------------------------
+
+!Circulation Figures ---------------------------------------------
+
+statement = select journals.journalCode, journals.journalName, subscriber_type.subtypecode, sum(subscriptiondetails.copies) \
+            from subscriber left join subscriber_type on subscriber.subtype = subscriber_type.id, subscription, \
+            subscriptiondetails left join journal_group_contents on subscriptiondetails.journalGroupID = journal_group_contents.id \
+            left join journal_groups on journal_group_contents.id = journal_groups.id left join journals on journal_groups.id = journals.id \
+            where \
+            subscriptiondetails.subscriptionID = subscription.id  \
+            AND subscriptiondetails.journalGroupID = journal_group_contents.id \
+            AND journal_group_contents.journalGroupId = journal_groups.id \
+            and journal_group_contents.journalId = journals.id \
+            and subscription.subscriberID = subscriber.id 
+!End Cisrculation Figures ---------------------------------------------
+
 #--------------------------------------------------------------------------
 # End Reports
 #--------------------------------------------------------------------------
+
+
 
 #--------------------------------------------------------------------------
 # Invoice
