--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -681,7 +681,7 @@ list_circulation_figures = select
 
 !Circulation Figures ---------------------------------------------
 
-statement = select journals.journalCode, journals.journalName, subscriber_type.subtypecode, sum(subscriptiondetails.copies) \
+statement = select journals.journalCode, journals.journalName, subscriber_type.subtypecode, sum(subscriptiondetails.copies) as copies, count(subscriber.id) as subscriberCount \
             from subscriber left join subscriber_type on subscriber.subtype = subscriber_type.id, subscription, \
             subscriptiondetails left join journal_group_contents on subscriptiondetails.journalGroupID = journal_group_contents.id \
             left join journal_groups on journal_group_contents.id = journal_groups.id left join journals on journal_groups.id = journals.id \
@@ -690,7 +690,7 @@ statement = select journals.journalCode, journals.journalName, subscriber_type.s
             AND subscriptiondetails.journalGroupID = journal_group_contents.id \
             AND journal_group_contents.journalGroupId = journal_groups.id \
             and journal_group_contents.journalId = journals.id \
-            and subscription.subscriberID = subscriber.id 
+            and subscription.subscriberID = subscriber.id
 !End Cisrculation Figures ---------------------------------------------
 
 #--------------------------------------------------------------------------
